[gd_scene load_steps=11 format=2]

[ext_resource path="res://themes/Default/default.tres" type="Theme" id=1]
[ext_resource path="res://gui/InGame/ChoiceMenu/ChoiceMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/InGame/InGameGUI.gd" type="Script" id=3]
[ext_resource path="res://gui/InGame/NotifyDisplay/NotifyDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/InGame/DialoguePanel/DialoguePanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/QuickMenu/QuickMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://gui/InGame/DialoguePanel/SpeakerName.gd" type="Script" id=7]
[ext_resource path="res://addons/Rakugo/lib/resources/rakugo_theme.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Skip Animation"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Skipping >", "Skipping >>", "Skipping >>>" ]
}

[sub_resource type="Theme" id=2]
script = ExtResource( 8 )
links_color = Color( 0.133333, 0.368627, 0.74902, 1 )
idle_node_color = Color( 0.533333, 0.533333, 0.533333, 1 )
focus_node_color = Color( 0, 0.506836, 0.675781, 1 )
hover_node_color = Color( 0.877647, 0.882353, 0.887059, 1 )
pressed_node_color = Color( 0, 0.6, 0.8, 1 )
disable_node_color = Color( 0.533333, 0.533333, 0.498039, 0.533333 )

[node name="InGameGUI" type="Control"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ChoiceMenu" parent="." instance=ExtResource( 2 )]
anchor_left = 0.15
anchor_right = 0.85
anchor_bottom = 0.7
margin_left = 2.0
margin_right = 2.0

[node name="DialoguePanel" parent="." instance=ExtResource( 5 )]
margin_left = 30.0
margin_top = -37.0
margin_right = 30.0
margin_bottom = -37.0
rect_scale = Vector2( 0.95, 0.95 )
rect_pivot_offset = Vector2( 0.95, 0.95 )

[node name="QuickMenu" parent="." instance=ExtResource( 6 )]
margin_left = 685.0
margin_top = -43.0
margin_right = 194.0
margin_bottom = -3.0

[node name="NotifyDisplay" parent="." instance=ExtResource( 4 )]

[node name="SkipDisplay" type="PanelContainer" parent="."]
visible = false
anchor_top = 0.1
anchor_bottom = 0.1
margin_top = -53.5193
margin_right = 236.0
margin_bottom = -10.5193
rect_min_size = Vector2( 100, 20 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SkipDisplay"]
margin_left = 40.0
margin_top = 8.0
margin_right = 196.0
margin_bottom = 35.0
text = "Skipping >>>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SkipDisplay"]
autoplay = "Skip Animation"
"anims/Skip Animation" = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 221.0
margin_top = 447.0
margin_right = 567.0
margin_bottom = 496.0
theme = SubResource( 2 )
script = ExtResource( 7 )
[connection signal="quick_button_press" from="QuickMenu" to="." method="_on_quick_button_press"]
